# art-of-data-analysis

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml
projects/currency_viz/: requests.txt
projects/currency_viz/currency_strength_map/: currency_map.py
projects/earthquake_viz/: Dockerfile  README.md  app.py  main.py  packages.txt  requirements.txt
projects/earthquake_viz/app/: main.py
projects/earthquake_viz/app/config/: boundaries.py  settings.py
projects/earthquake_viz/app/core/: data_handler.py  geo_utils.py  usgs_api.py
projects/stock-quant-analysis/: .gitignore  README.md  app.py  main.py  requirements.txt  train_model.py
projects/stock-quant-analysis/app/: dashboard.py
projects/stock-quant-analysis/notebooks/: exploratory_analysis.ipynb  stock_predictor_papermill.ipynb
projects/stock-quant-analysis/src/: analysis.py  data_retrieval.py  main.py  visualization.py
projects/weather-quake-dashboard/: .dockerignore  Dockerfile  README.md  app.py  requirements.txt
projects/weather-quake-dashboard/.streamlit/: config.toml
projects/weather-quake-dashboard/tests/: test_open_meteo_api.py  test_usgs_earthquake_api.py
projects/weather_viz/: Dockerfile  README.md  app.py  requirements.txt
projects/weather_viz/src/: api_handler.py  data_processor.py  main.py
weather-quake-dashboard/: .gitignore  README.md
weather-quake-dashboard/src/api/: open_meteo_api.py  usgs_earthquake_api.py
weather-quake-dashboard/src/visualizations/: correlations.py  quake_3d.py
(+42 files in other folders)
