[project]
name = "art-of-data-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "sandy-sp",email = "sandeep.paidipati@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "folium (>=0.19.5,<0.20.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "pycountry (>=24.6.1,<25.0.0)",
    "uszipcode (>=1.0.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pgeocode (>=0.5.0,<0.6.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
